--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Research Methodology Bootcamp</title>
   </head>
   <body>
+    <img src = "flyer.png">
     <h1>Research Methodology Bootcamp</h1>
   </body>
 </html>
